add: swagger doc for all routes
