# app/Http/Controllers/V1/Auth/AuthController.php
@@ -7,6 +7,7 @@ use App\Http\Requests\AuthRequest;
 use App\Http\Resources\TokenResource;
 use App\Services\AuthService;
 use Illuminate\Http\JsonResponse;
+use OpenApi\Annotations as OA;
 
 class AuthController extends Controller
 {
@@ -21,6 +22,34 @@ class AuthController extends Controller
     }
 
     /**
+     * Auth users
+     *
+     * @OA\Post(
+     *     path="/v1/auth/login",
+     *     summary="Auth user",
+     *     tags={"Auth"},
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="email",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     type="string"
+     *                 ),
+     *                 example={"email": "example@mail.ru", "password": "1235"}
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK"
+     *     )
+     * )
+     *
      * @param AuthRequest $request
      * @return JsonResponse|TokenResource
      */
