# app/Http/Controllers/V1/Auth/LogoutController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\V1\Auth;
 use App\Http\Controllers\Controller;
 use App\Services\AuthService;
 use Illuminate\Http\JsonResponse;
+use OpenApi\Annotations as OA;
 
 class LogoutController extends Controller
 {
@@ -19,6 +20,18 @@ class LogoutController extends Controller
     }
 
     /**
+     * Logout
+     *
+     * @OA\Post(
+     *     path="/v1/auth/logout",
+     *     summary="Logout",
+     *     tags={"Auth"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK"
+     *     )
+     * )
+     *
      * @return JsonResponse
      */
     public function logout(): JsonResponse
