# app/Http/Controllers/V1/Auth/RefreshController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\V1\Auth;
 use App\Http\Controllers\Controller;
 use App\Http\Resources\TokenResource;
 use App\Services\AuthService;
+use OpenApi\Annotations as OA;
 
 class RefreshController extends Controller
 {
@@ -19,6 +20,18 @@ class RefreshController extends Controller
     }
 
     /**
+     * Refresh token
+     *
+     * @OA\Post(
+     *     path="/v1/auth/refresh",
+     *     summary="Refresh token",
+     *     tags={"Auth"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK"
+     *     )
+     * )
+     *
      * @return TokenResource
      */
     public function refresh(): TokenResource
